--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.4.1
+  
   get: ^4.6.6
   http: ^1.2.2
 
@@ -17,12 +17,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_native_splash: ^2.4.1
+
+flutter_native_splash:
+  image: assets/splash_image.jpeg
+  color: "#ffffff"
+  android_12: 
+    image: assets/splash_image.jpeg
+    color: "#ffffff"
 
 flutter:
   uses-material-design: true
   assets:
     - assets/splash_image.jpeg
 
-flutter_native_splash:
-  image: assets/splash_image.jpeg
-  color: "#ffffff"
